--- a/node-review/package.json
+++ b/node-review/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "Node practice workshop - Level 100",
     "scripts" : {
-        
+        "start" : "node app.js"
     },
     "dependencies" : {
         
