--- a/node-review/package.json
+++ b/node-review/package.json
@@ -1,9 +1,9 @@
 {
-    "name" : "Node practice workshop - Level 100",
-    "scripts" : {
-        "start" : "node app.js"
+    "name": "Node practice workshop - Level 100",
+    "scripts": {
+        "start": "node app.js"
     },
-    "dependencies" : {
-        
+    "dependencies": {
+        "express": "^4.18.2"
     }
 }
