completd server works

--- a/crud/package.json
+++ b/crud/package.json
@@ -4,8 +4,7 @@
   "description": "Our Beyonce Album CRUD App",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
