pick nits, register modules

--- a/micro-front-end/hugo.toml
+++ b/micro-front-end/hugo.toml
@@ -1,5 +1,5 @@
 title = "CYF Workshops"
-baseURL = "https://projects.codeyourfuture.io/"
+baseURL = "https://workshops.codeyourfuture.io/"
 
 [module]
   [[module.imports]]
