tiny syntax fix

--- a/introduction-to-typescript/package.json
+++ b/introduction-to-typescript/package.json
@@ -3,7 +3,7 @@
     "test": "vitest src/tests",
     "test-exercise1": "vitest src/tests/exercise1.test.ts",
     "test-exercise2": "vitest src/tests/exercise2.test.ts --typecheck.config tsconfig.exercise2.json",
-    "test-exercise3": "vitest src/tests/exercise3.test.ts",
+    "test-exercise3": "vitest src/tests/exercise3.test.ts"
   },
   "devDependencies": {
     "ts-node": "10.9.2",
